Updated background image location

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   padding-top: 0px;
   margin-top: 0px;
   font-family: "Comic Sans MS", "Comic Sans", serif;
-  background-image: url("/assets/GOATfastest.gif");
+  background-image: url("/dance-goat-dance/assets/GOATfastest.gif");
   background-size: 50%;
   text-align: center;
 }
